database interaction refactored